--- a/package.json
+++ b/package.json
@@ -19,19 +19,19 @@
   },
   "homepage": "https://github.com/wz2cool/swagger-ts-doc#readme",
   "dependencies": {
-    "lodash": "~4.17.5",
-    "reflect-metadata": "~0.1.12"
+    "lodash": "^4.17.15",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
-    "@types/body-parser": "~1.16.8",
-    "@types/express": "~4.11.1",
-    "@types/lodash": "~4.14.106",
-    "@types/reflect-metadata": "~0.1.0",
-    "body-parser": "~1.18.2",
-    "express": "~4.16.3",
-    "swagger-ui-express": "~3.0.6",
-    "tsbatis": "~0.1.8",
-    "tslint": "~5.9.1",
-    "typescript": "~2.8.1"
+    "@types/body-parser": "^1.19.0",
+    "@types/express": "^4.17.6",
+    "@types/lodash": "^4.14.154",
+    "@types/reflect-metadata": "^0.1.0",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "swagger-ui-express": "^3.0.10",
+    "tsbatis": "^0.1.8",
+    "tslint": "^6.1.2",
+    "typescript": "^3.9.3"
   }
 }
