--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
     "compilerOptions": {
         "lib": [
-            "es6"
+            "esnext",
         ],
         "module": "commonjs",
-        "target": "es5",
+        "target": "es2018",
         "declaration": true,
         "noImplicitAny": false,
         "sourceMap": true,
